Fix the prompt showing in group user selection dropdown, set a max width to prevent overflow

--- a/webapp/src/pages/globals.css
+++ b/webapp/src/pages/globals.css
@@ -215,3 +215,6 @@ body {
 .noscrollbar {
   scrollbar-width: none;
 }
+div.grow.pl-2\.5.py-2.pr-2.flex.flex-wrap.gap-1 {
+  width: 80%!important;
+}
